// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should change style if disabled 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  border-style: solid;
  border-color: #d2d6dc;
}

.c1:hover {
  background-color: #f9fafb;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:active,
.c1[data-active=true] {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover,
.c1[aria-disabled=true],
.c1[aria-disabled=true]:focus,
.c1[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
}

<div>
  <button
    aria-busy="false"
    class="c0 c1"
    disabled=""
    role="button"
  >
    Disabled Button
  </button>
</div>
`;

exports[`<Button /> should contain spinner with \`isLoading\` prop 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  border-style: solid;
  border-color: #d2d6dc;
}

.c2 {
  box-sizing: border-box;
  min-width: 0;
  height: 20px;
  border-width: 2px;
  width: 20px;
  color: #777;
}

.c3 {
  display: block;
  height: 20px;
  border-width: 2px;
  width: 20px;
  color: #777;
}

.c4 {
  display: inline-block;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: currentColor;
  border-top-color: currentColor;
  border-radius: 9999px;
  color: currentColor;
  border-style: solid;
  height: 20px;
  width: 20px;
  border-width: 2px;
  margin: 2px;
  -webkit-animation: cilQsd 0.45s linear infinite;
  animation: cilQsd 0.45s linear infinite;
}

.c1:hover {
  background-color: #f9fafb;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:active,
.c1[data-active=true] {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover,
.c1[aria-disabled=true],
.c1[aria-disabled=true]:focus,
.c1[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
}

<div>
  <button
    aria-busy="true"
    class="c0 c1"
    disabled=""
    role="button"
  >
    <div
      class="c2 c3 c4"
    />
  </button>
</div>
`;

exports[`<Button /> should render 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  border-style: solid;
  border-color: #d2d6dc;
}

.c1:hover {
  background-color: #f9fafb;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:active,
.c1[data-active=true] {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover,
.c1[aria-disabled=true],
.c1[aria-disabled=true]:focus,
.c1[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
}

<div>
  <button
    aria-busy="false"
    class="c0 c1"
    role="button"
  >
    Test
  </button>
</div>
`;
